Bug 527018 - [refactoring] Replace use of Number constructors by valueOf
Change-Id: Iaf97601ee4244dc9e751a30cf4ac94250ede03bd
Signed-off-by: Karsten Thoms <karsten.thoms@itemis.de>