@@ -81,7 +81,7 @@ public class RemoteTocProvider extends AbstractTocProvider {
 
 						if(protocol[i].equalsIgnoreCase(PROTOCOL))
 						{
-							url = new URL(protocol[i], host[i], new Integer(port[i]) .intValue(),
+							url = new URL(protocol[i], host[i], Integer.valueOf(port[i]) .intValue(),
 									path[i] + PATH_TOC + '?' + PARAM_LANG + '=' + locale);
 
 							in = ProxyUtil.getStream(url);
